/**
 * Licensed to the Apache Software Foundation (ASF) under one
 * or more contributor license agreements.  See the NOTICE file
 * distributed with this work for additional information
 * regarding copyright ownership.  The ASF licenses this file
 * to you under the Apache License, Version 2.0 (the
 * "License"); you may not use this file except in compliance
 * with the License.  You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
package org.apache.hadoop.ssm.protocol;

option java_package = "org.smartdata.common.protocol";
option java_outer_classname = "AdminServerProto";
option java_generic_services = true;
option java_generate_equals_and_hash = true;

message GetServiceStateRequestProto {
}

message GetServiceStateResponseProto {
  required int32 state = 1;
}

message RuleInfoProto {
  required sint64 id = 1;
  required sint64 submitTime = 2;
  required sint64 lastCheckTime = 3;
  required sint64 numChecked = 4;
  required sint64 numCmdsGen = 5;
  required string ruleText = 6;
  required int32 rulestateProto = 7;
}

message GetRuleInfoRequestProto {
  required sint64 ruleId = 1;
}

message GetRuleInfoResponseProto {
  required RuleInfoProto result = 1;
}

message SubmitRuleRequestProto {
  required string rule = 1;
  required int32 initState = 2;
}

message SubmitRuleResponseProto {
  required int64 ruleId = 1;
}

message CheckRuleRequestProto {
  required string rule = 1;
}

message CheckRuleResponseProto {
}

message ListRulesInfoRequestProto {
}

message ListRulesInfoResponseProto {
  repeated RuleInfoProto rulesInfo = 1;
}

message DeleteRuleRequestProto {
  required int64 ruleId = 1;
  required bool dropPendingCmdlets = 2;
}

message DeleteRuleResponseProto {
}

message ActivateRuleRequestProto {
  required int64 ruleId = 1;
}

message ActivateRuleResponseProto {
}

message DisableRuleRequestProto {
  required int64 ruleId = 1;
  required bool dropPendingCmdlets = 2;
}

message DisableRuleResponseProto {
}

message CmdletInfoProto {
  required int64 cid = 1;
  required int64 rid = 2;
  repeated int64 aids = 3;
  required int64 generateTime = 4;
  required int64 stateChangedTime = 5;
  required int32 state = 6;
  required string parameters = 7;
}

message GetCmdletInfoRequestProto {
  required int64 cmdletID = 1;
}

message GetCmdletInfoResponseProto {
  required CmdletInfoProto cmdletInfo = 1;
}

message ListCmdletInfoRequestProto {
  required int64 ruleID = 1;
  required int32 cmdletState = 2;
}

message ListCmdletInfoResponseProto {
  repeated CmdletInfoProto cmdletInfos = 1;
}

message ActivateCmdletRequestProto {
  required int64 cmdletID = 1;
}

message ActivateCmdletResponseProto {
}

message DisableCmdletRequestProto {
  required int64 cmdletID = 1;
}

message DisableCmdletResponseProto {
}

message DeleteCmdletRequestProto {
  required int64 cmdletID = 1;
}

message DeleteCmdletResponseProto {
}

message ActionInfoProto {
  required int64 actionId = 1;
  required int64 cmdletId = 2;
  required string actionName = 3;
  repeated string args = 4;
  required string result = 5;
  required string log = 6;
  required bool successful = 7;
  required int64 createTime = 8;
  required bool finished = 9;
  required int64 finishTime = 10;
  required float progress = 11;
}

message GetActionInfoRequestProto {
  required int64 actionID = 1;
}

message GetActionInfoResponseProto {
  required ActionInfoProto actionInfo = 1;
}

message ListActionInfoOfLastActionsRequestProto {
  required int32 maxNumActions = 1;
}

message ListActionInfoOfLastActionsResponseProto {
  repeated ActionInfoProto actionInfoList = 1;
}

message ActionDescriptorProto {
  required string actionName = 1;
  required string displayName = 2;
  required string usage = 3;
  required string comment = 4;
}

message SubmitCmdletRequestProto {
  required string cmd = 1;
}

message SubmitCmdletResponseProto {
  required int64 res = 10;
}

message ListActionsSupportedRequestProto {
}

message ListActionsSupportedResponseProto {
  repeated ActionDescriptorProto actDesList = 1;
}

service protoService {
  rpc getServiceState (GetServiceStateRequestProto)
  returns (GetServiceStateResponseProto);
  rpc submitRule (SubmitRuleRequestProto)
  returns (SubmitRuleResponseProto);
  rpc checkRule (CheckRuleRequestProto)
  returns (CheckRuleResponseProto);
  rpc getRuleInfo (GetRuleInfoRequestProto)
  returns (GetRuleInfoResponseProto);
  rpc listRulesInfo (ListRulesInfoRequestProto)
  returns (ListRulesInfoResponseProto);
  rpc deleteRule (DeleteRuleRequestProto)
  returns (DeleteRuleResponseProto);
  rpc activateRule (ActivateRuleRequestProto)
  returns (ActivateRuleResponseProto);
  rpc disableRule (DisableRuleRequestProto)
  returns (DisableRuleResponseProto);
  rpc getCmdletInfo (GetCmdletInfoRequestProto)
  returns (GetCmdletInfoResponseProto);
  rpc listCmdletInfo (ListCmdletInfoRequestProto)
  returns (ListCmdletInfoResponseProto);
  rpc activateCmdlet (ActivateCmdletRequestProto)
  returns (ActivateCmdletResponseProto);
  rpc disableCmdlet (DisableCmdletRequestProto)
  returns (DisableCmdletResponseProto);
  rpc deleteCmdlet (DeleteCmdletRequestProto)
  returns (DeleteCmdletResponseProto);
  rpc getActionInfo (GetActionInfoRequestProto)
  returns (GetActionInfoResponseProto);
  rpc listActionInfoOfLastActions (ListActionInfoOfLastActionsRequestProto)
  returns (ListActionInfoOfLastActionsResponseProto);
  rpc submitCmdlet (SubmitCmdletRequestProto)
  returns (SubmitCmdletResponseProto);
  rpc listActionsSupported (ListActionsSupportedRequestProto)
  returns (ListActionsSupportedResponseProto);
}
